--- a/notebook_hcg_deficiency.ipynb
+++ b/notebook_hcg_deficiency.ipynb
@@ -27,13 +27,10 @@
     "import pandas as pd\n",
     "from scipy.stats import spearmanr\n",
     "from astroquery.ipac.ned import Ned\n",
-    "# from astroquery.vizier import Vizier\n",
-    "# from astroquery.sdss import SDSS\n",
     "import astropy.coordinates as coords\n",
     "import astropy.units as u\n",
     "from astropy.io import fits, ascii\n",
     "from astropy.wcs import WCS\n",
-    "# from astropy.table import Table, QTable\n",
     "from astropy.nddata import Cutout2D\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -45,13 +42,9 @@
     "from matplotlib.font_manager import FontProperties\n",
     "from spectral_cube import SpectralCube\n",
     "from scipy.stats import ks_2samp\n",
-    "# import legacystamps\n",
-    "# import splusdata\n",
     "import yaml\n",
     "from regions import Regions\n",
     "import arviz as az\n",
-    "\n",
-    "os.chdir('/mnt/scratch/HCGs')\n",
     "import hidefutils as utils\n",
     "warnings.simplefilter('ignore', category=AstropyWarning)\n",
     "warnings.filterwarnings(action='ignore', category=UserWarning, message='converting a masked element to nan ')\n",
@@ -320,7 +313,7 @@
     "\n",
     "T_text = ['${<}3$', '$3{-}5$', '${>}5$']\n",
     "\n",
-    "fout = open('/mnt/scratch/HCGs/tables/mcmc_fit.tex', 'w')\n",
+    "fout = open('./tables/mcmc_fit.tex', 'w')\n",
     "fout.write(header)\n",
     "\n",
     "for i, (x, t) in enumerate(zip(arrays_split, trace_split)):\n",
@@ -788,7 +781,7 @@
     "df_cores, df_nocores = pd.DataFrame(), pd.DataFrame()\n",
     "for hcgno in [16, 30, 31, 90, 91, 97]:\n",
     "    marker = markers[f'HCG {hcgno}']\n",
-    "    df = pd.read_csv(f'/mnt/scratch/HCGs/params_tables/HIdef_hcg{hcgno}.csv')\n",
+    "    df = pd.read_csv(f'./params_tables/HIdef_hcg{hcgno}.csv')\n",
     "    df.dropna(subset=['Name'], inplace=True)\n",
     "    df = df[df.Name.str.replace(' ', '') != 'core:total']\n",
     "    m_core = df.Name.str.contains('core')\n",
@@ -1471,9 +1464,9 @@
     }
    ],
    "source": [
-    "with open('/mnt/scratch/HCGs/group_members.yml') as f:\n",
+    "with open('./group_members.yml') as f:\n",
     "    group_members = yaml.safe_load(f)\n",
-    "with open('/mnt/scratch/HCGs/data_files.yml') as f:\n",
+    "with open('./data_files.yml') as f:\n",
     "    params = yaml.safe_load(f)\n",
     "\n",
     "def inflate_array(array, axis, factor):\n",
@@ -1531,7 +1524,7 @@
     "\\\\hline \\n\\\n",
     "\\\\multirow{2}{*}{Phase} & \\\\multirow{2}{*}{HCG} & \\\\multicolumn{2}{c}{NED (J2000)} & \\\\multicolumn{2}{c}{CoM (J2000)} & $\\\\delta\\\\rm pos$ \\\\\\\\ \\n\\\n",
     " & & RA & Dec & RA & Dec & arcmin \\\\\\\\ \\n'\n",
-    "fout = open('/mnt/scratch/HCGs/tables/centres_coords.tex', 'w')\n",
+    "fout = open('./tables/centres_coords.tex', 'w')\n",
     "fout.write(header)\n",
     "\n",
     "hcg_boxes = {}\n",
@@ -1542,7 +1535,7 @@
     "    \n",
     "    for k in phase.keys():\n",
     "        if g in phase[k]: p = k\n",
-    "    grz, opthdr = fits.getdata('/mnt/scratch/HCGs/legacy_images/%s_grz.fits' %g.replace(' ',''), header=True)\n",
+    "    grz, opthdr = fits.getdata('./legacy_images/%s_grz.fits' %g.replace(' ',''), header=True)\n",
     "    optwcs = WCS(opthdr).celestial\n",
     "    try:\n",
     "        pixsize = abs(opthdr['CDELT1'])\n",
@@ -1804,7 +1797,7 @@
     "for i,g in enumerate(glist):\n",
     "    if i < 3: ix, iy = 0, i\n",
     "    else: ix, iy = 1, i-3\n",
-    "    grz, opthdr = fits.getdata('/mnt/scratch/HCGs/legacy_images/%s_grz.fits' %g.replace(' ',''), header=True)\n",
+    "    grz, opthdr = fits.getdata('./legacy_images/%s_grz.fits' %g.replace(' ',''), header=True)\n",
     "    _, rband, _ = grz\n",
     "    optwcs = WCS(opthdr).celestial\n",
     "    try:\n",
@@ -1985,7 +1978,7 @@
     "for i,g in enumerate(glist):\n",
     "    ix, iy = i // 3, i % 3\n",
     "    \n",
-    "    grz, opthdr = fits.getdata('/mnt/scratch/HCGs/legacy_images/%s_grz.fits' %g.replace(' ',''), header=True)\n",
+    "    grz, opthdr = fits.getdata('./legacy_images/%s_grz.fits' %g.replace(' ',''), header=True)\n",
     "    _, rband, _ = grz\n",
     "    optwcs = WCS(opthdr).celestial\n",
     "    try:\n",
@@ -2148,9 +2141,9 @@
     }
    ],
    "source": [
-    "with open('/mnt/scratch/HCGs/group_members.yml') as f:\n",
+    "with open('./group_members.yml') as f:\n",
     "    group_members = yaml.safe_load(f)\n",
-    "with open('/mnt/scratch/HCGs/data_files.yml') as f:\n",
+    "with open('./data_files.yml') as f:\n",
     "    params = yaml.safe_load(f)\n",
     "\n",
     "fig = plt.figure(figsize=(10,6))\n",
@@ -2178,7 +2171,7 @@
     "for i,g in enumerate(glist):\n",
     "    if i < 3: ix, iy = 0, i\n",
     "    else: ix, iy = 1, i-3\n",
-    "    grz, opthdr = fits.getdata('/mnt/scratch/HCGs/legacy_images/%s_grz.fits' %g.replace(' ',''), header=True)\n",
+    "    grz, opthdr = fits.getdata('./legacy_images/%s_grz.fits' %g.replace(' ',''), header=True)\n",
     "    _, rband, _ = grz\n",
     "    optwcs = WCS(opthdr).celestial\n",
     "    try:\n",
@@ -2440,7 +2433,7 @@
     "\\\\cmidrule(lr){3-5}  \\\\cmidrule(l){6-8} \\n\\\n",
     "& & \\\\% rich & \\\\% normal & \\\\% poor & \\\\% rich & \\\\% normal & \\\\% poor \\\\\\\\ \\n\\\n",
     "\\\\hline \\\\rule{0pt}{10pt} \\n'\n",
-    "fout = open('/mnt/scratch/HCGs/tables/hidef_stats.tex', 'w')\n",
+    "fout = open('./tables/hidef_stats.tex', 'w')\n",
     "fout.write(header)\n",
     "\n",
     "for i, hcg in enumerate(glist):\n",
@@ -2644,7 +2637,7 @@
     " & & \\multicolumn{2}{c}{(J2000)} & ($\\\\rm km\\,s^{-1}$) & ($\\\\rm km\\,s^{-1}$) & (Mpc) & ($10^{12}\\\\,M_\\\\odot$) & (kpc) & \\\\\\\\ \\n\\\n",
     "(1) & (2) & \\multicolumn{2}{c}{(3)} & (4) & (5) & (6) & (7) & (8) & (9) \\\\\\\\ \\n\"\n",
     " \n",
-    "fout = open('/mnt/scratch/HCGs/tables/hcg_props.tex', 'w')\n",
+    "fout = open('./tables/hcg_props.tex', 'w')\n",
     "fout.write(header)\n",
     "\n",
     "for g in glist:\n",
@@ -2706,7 +2699,7 @@
     "    # df_ = utils.calculate_individual_masses(hcg, show_plot=False)\n",
     "    \n",
     "    # Uncomment to read data from file\n",
-    "    df_ = pd.read_csv(f'/mnt/scratch/HCGs/individual_masses_hcg{hcg}.csv')\n",
+    "    df_ = pd.read_csv(f'./individual_masses_hcg{hcg}.csv')\n",
     "    \n",
     "    df_indv = df_indv._append(df_, ignore_index=True)"
    ]
@@ -3074,7 +3067,7 @@
     "\\\\multirow{2}{*}{HCG} & \\\\multirow{2}{*}{member} & $\\\\rm\\log{M_{\\\\textsc{Hi}, gal}}$ & $\\\\rm\\log{M_{\\hi,ext}}$ \\\\\\\\ \\n\\\n",
     " & & $\\\\rm (M_\\odot)$ & $\\\\rm (M_\\odot)$ \\\\\\\\ \\n\\\n",
     "\\\\hline \\\\rule{0pt}{10pt}\\n'\n",
-    "fout = open('/mnt/scratch/HCGs/tables/tab_mems_phase2_3.tex', 'w')\n",
+    "fout = open('./tables/tab_mems_phase2_3.tex', 'w')\n",
     "fout.write(header)\n",
     "\n",
     "gs = [16, 31, 91]\n",
@@ -3084,7 +3077,7 @@
     "    dfg = df_groups.get_group(g)\n",
     "    dfg.reset_index().drop(columns='index', inplace=True)\n",
     "    dfg = dfg.sort_values(by='member', ignore_index=True)\n",
-    "    df_pars = pd.read_csv(f'/mnt/scratch/HCGs/params_tables/HIdef_hcg{g}.csv')\n",
+    "    df_pars = pd.read_csv(f'./params_tables/HIdef_hcg{g}.csv')\n",
     "    df_pars.dropna(subset=['Name'], inplace=True)\n",
     "    mtot = 10**df_pars[df_pars.Name=='core: total'].logMHIobs.values[0]\n",
     "    for i,row in dfg.iterrows():\n",
@@ -3104,7 +3097,7 @@
     "fout.write('\\\\hline\\n')\n",
     "fout.write('\\\\rule{0pt}{10pt}\\n')\n",
     "for g in [30, 90, 97]:\n",
-    "    df_pars = pd.read_csv(f'/mnt/scratch/HCGs/params_tables/HIdef_hcg{g}.csv')\n",
+    "    df_pars = pd.read_csv(f'./params_tables/HIdef_hcg{g}.csv')\n",
     "    df_pars.dropna(subset=['Name'], inplace=True)\n",
     "    dfc = df_pars[df_pars.Name.str.contains('core')]\n",
     "    dfc = dfc.sort_values(by='Name', ignore_index=True)\n",
@@ -3226,11 +3219,11 @@
     }
    ],
    "source": [
-    "with open('/mnt/scratch/HCGs/group_members.yml') as f:\n",
+    "with open('./group_members.yml') as f:\n",
     "    group_members = yaml.safe_load(f)\n",
-    "with open('/mnt/scratch/HCGs/data_files.yml') as f:\n",
+    "with open('./data_files.yml') as f:\n",
     "    params = yaml.safe_load(f)\n",
-    "with open('/mnt/scratch/HCGs/separate_hi_discs/ids_to_galnames.yml') as fp:\n",
+    "with open('./separate_hi_discs/ids_to_galnames.yml') as fp:\n",
     "    ids_to_galnames = yaml.safe_load(fp)\n",
     "     \n",
     "fig = plt.figure(figsize=(8,10))\n",
@@ -3245,7 +3238,7 @@
     "   \n",
     "for i,g in enumerate(p2_list):\n",
     "    ix, iy = i, 0\n",
-    "    grz, opthdr = fits.getdata('/mnt/scratch/HCGs/legacy_images/%s_grz.fits' %g.replace(' ',''), header=True)\n",
+    "    grz, opthdr = fits.getdata('./legacy_images/%s_grz.fits' %g.replace(' ',''), header=True)\n",
     "    optwcs = WCS(opthdr).celestial\n",
     "\n",
     "    id_to_galname = ids_to_galnames[g]\n",
@@ -3253,9 +3246,9 @@
     "        suffix = '_15as'\n",
     "    else:\n",
     "        suffix = ''    \n",
-    "    cube = SpectralCube.read('/mnt/scratch/HCGs/separate_hi_discs/%s_cropped%s.fits' %(g.replace(' ','').lower(),suffix))\n",
+    "    cube = SpectralCube.read('./separate_hi_discs/%s_cropped%s.fits' %(g.replace(' ','').lower(),suffix))\n",
     "    cube_kms = cube.with_spectral_unit(u.km/u.s, velocity_convention='optical', rest_value=1420405752*u.Hz)\n",
-    "    mask_array = fits.getdata('/mnt/scratch/HCGs/separate_hi_discs/slicerastro_output/%s_all%s_mask.fits'%(g.replace(' ','').lower(),suffix))\n",
+    "    mask_array = fits.getdata('./separate_hi_discs/slicerastro_output/%s_all%s_mask.fits'%(g.replace(' ','').lower(),suffix))\n",
     "\n",
     "    try:\n",
     "        pixsize = abs(opthdr['CDELT1'])\n",
@@ -3476,11 +3469,11 @@
     "        header += unitline\n",
     "        header += '\\hline\\n\\\\\\[-1.5ex]\\n\\\\endhead\\n'\n",
     "\n",
-    "    fout = open(f'/mnt/scratch/HCGs/tables/gals_props_{sample}.tex', 'w')\n",
+    "    fout = open(f'./tables/gals_props_{sample}.tex', 'w')\n",
     "    fout.write(header)\n",
     "\n",
     "    for g in g_list:\n",
-    "        df = pd.read_csv(f'/mnt/scratch/HCGs/params_tables/HIdef_hcg{g}.csv', na_values='--')\n",
+    "        df = pd.read_csv(f'./params_tables/HIdef_hcg{g}.csv', na_values='--')\n",
     "        df.dropna(subset=['Name'], inplace=True)\n",
     "        for k in phases.keys():\n",
     "            if g in phases[k]: phase = k\n",
@@ -4237,7 +4230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "figdir = '/mnt/scratch/HCGs/app_hidef_figures/'"
+    "figdir = './app_hidef_figures/'"
    ]
   },
   {
@@ -4258,7 +4251,7 @@
     }
    ],
    "source": [
-    "figdir = '/mnt/scratch/HCGs/app_hidef_figures/'\n",
+    "figdir = './app_hidef_figures/'\n",
     "\n",
     "markers = {'HCG 16': ['o','#00CCCC'],\n",
     "            'HCG 30': ['x','#DC143C'],\n",
@@ -4303,7 +4296,7 @@
     "df_cores, df_nocores = pd.DataFrame(), pd.DataFrame()\n",
     "for hcgno in [16, 30, 31, 90, 91, 97]:\n",
     "    marker = markers[f'HCG {hcgno}']\n",
-    "    df = pd.read_csv(f'/mnt/scratch/HCGs/app_params_tables/HIdef_hcg{hcgno}.csv')\n",
+    "    df = pd.read_csv(f'./app_params_tables/HIdef_hcg{hcgno}.csv')\n",
     "    df.dropna(subset=['Name'], inplace=True)\n",
     "    df = df[df.Name.str.replace(' ', '') != 'core:total']\n",
     "    m_core = df.Name.str.contains('core')\n",
