--- a/group_members.ipynb
+++ b/group_members.ipynb
@@ -13,7 +13,6 @@
     "from astroquery.ipac.ned import Ned\n",
     "import yaml\n",
     "\n",
-    "os.chdir('/mnt/scratch/HCGs')\n",
     "import hidefutils as utils"
    ]
   },
@@ -47,8 +46,6 @@
     "    with open('data_files.yml') as f:\n",
     "        params = yaml.safe_load(f)\n",
     "    df = pd.read_csv(f'params_tables/HIdef_hcg{hcg}.csv', na_values='--')\n",
-    "    # members = group_members[g]\n",
-    "    # cores = members['core']\n",
     "    vcen = params[f'HCG {hcg}']['velocity']\n",
     "    df = df.Name.str.replace('core: ', '')\n",
     "    name_cores = core_members[hcg]\n",
@@ -78,11 +75,9 @@
     "    with open('data_files.yml') as f:\n",
     "        params = yaml.safe_load(f)\n",
     "\n",
-    "    # hcg_members = members[g]\n",
-    "    # core_members = hcg_members['core']\n",
     "    name_cores = core_members[hcg]\n",
     "\n",
-    "    masses = pd.read_csv(f'/mnt/scratch/HCGs/stellar_masses_h{hcg}.csv', index_col='ID')\n",
+    "    masses = pd.read_csv(f'./stellar_masses_h{hcg}.csv', index_col='ID')\n",
     "    core_masses = masses[masses.Name.isin(name_cores)]\n",
     "    ra, dec, sm = core_masses.RA, core_masses.Dec, 10**core_masses.logMstar\n",
     "    cen_ra, cen_dec = utils.center_radec(ra, dec, sm)\n",
@@ -419,7 +414,7 @@
    "source": [
     "hcg = 90\n",
     "sigma = 3\n",
-    "t = pd.read_csv(f'/mnt/scratch/HCGs/params_tables/HIdef_hcg{hcg}.csv')\n",
+    "t = pd.read_csv(f'./params_tables/HIdef_hcg{hcg}.csv')\n",
     "t.dropna(subset=['Name'], inplace=True)\n",
     "ra, dec, sep_norm, rmag, vsys = t['RA'], t['Dec'], t['sep_norm'], t['rmag'], t['Vsys']\n",
     "coos = coord.SkyCoord(ra, dec, unit='deg', frame='icrs')\n",
@@ -432,93 +427,12 @@
     "vcore = t[t.Name == 'total']['Vsys'].values[0]\n",
     "vdisp = initial_velocity_dispersion(hcg, initial_core_members)\n",
     "\n",
-    "# cenradec = Ned.query_object(f'HCG {hcg}')\n",
-    "# cencoo = coord.SkyCoord(cenradec[0]['RA'], cenradec[0]['DEC'], unit=('deg'), frame='icrs')\n",
     "cenradec = initial_center_of_mass(hcg, initial_core_members)\n",
     "cencoo = coord.SkyCoord(cenradec[0], cenradec[1], unit=('deg'), frame='icrs')\n",
     "seps = cencoo.separation(coos).arcmin\n",
-    "# len(t), len(t[sep < 1])\n",
     "min_rmag = np.min(rmag[m_cores])\n",
-    "# max_rmag = np.max(rmag[m_cores])\n",
     "m = (seps < sigma*medsep) & (vsys > vcore - sigma*vdisp) & (vsys < vcore + sigma*vdisp) #& (rmag <= min_rmag + 3) \n",
-    "# m = sep < 1\n",
     "t[m]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0679999999999996"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hcg = 97\n",
-    "sigma = 3\n",
-    "t = pd.read_csv(f'/mnt/scratch/HCGs/params_tables/HIdef_hcg{hcg}.csv')\n",
-    "t.dropna(subset=['Name'], inplace=True)\n",
-    "ra, dec, sep_norm, rmag, vsys = t['RA'], t['Dec'], t['sep_norm'], t['rmag'], t['Vsys']\n",
-    "coos = coord.SkyCoord(ra, dec, unit='deg', frame='icrs')\n",
-    "t.Name = t.Name.str.replace('core: ', '')\n",
-    "m_cores = t.Name.isin(initial_core_members[hcg])\n",
-    "gms = t[m_cores].logMs.values\n",
-    "gms.max() - gms.min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.052608868563679"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "16.09263751/medsep"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.440824265663562"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "median_separation(coo_cores)"
    ]
   }
  ],
